# schematic-extractor

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  LICENSE  README.md  TEST_MANUAL.md  TODO.md  docker-compose.yml  pyproject.toml  reapply_v2.py  test_repro.py
_archive/: HANDOFF_pre_template_20260619.md
data/ground_truth/: test.cir  test.net  test_graph.json
data/kicad/: test_resistor_divider.kicad_sch
diagnosi_d3/: REPORT_D3_V3_FAILED.md  arduino_micro_diagnosis.json  arduino_micro_diagnosis.py  bench_llama3_1_8b-instruct-q4_K_M_q1.txt  bench_llama3_1_8b-instruct-q4_K_M_q2.txt  bench_llama3_1_8b-instruct-q4_K_M_q3.txt  bench_llama3_1_8b-instruct-q4_K_M_q4.txt  bench_llama3_1_8b-instruct-q4_K_M_q5.txt  bench_mistral_7b-instruct-v0_3-q4_K_M_q1.txt  bench_mistral_7b-instruct-v0_3-q4_K_M_q2.txt  bench_mistral_7b-instruct-v0_3-q4_K_M_q3.txt  bench_mistral_7b-instruct-v0_3-q4_K_M_q4.txt  bench_mistral_7b-instruct-v0_3-q4_K_M_q5.txt  bench_qwen2_5_7b-instruct-q4_K_M_q1.txt  bench_qwen2_5_7b-instruct-q4_K_M_q2.txt  bench_qwen2_5_7b-instruct-q4_K_M_q3.txt  bench_qwen2_5_7b-instruct-q4_K_M_q4.txt  bench_qwen2_5_7b-instruct-q4_K_M_q5.txt  benchmark_llm.py  benchmark_llm_results.json  benchmark_models.py  close_isolated.txt  compare_detector.py  dump_metrics.py  error_analysis.py  f1_all_boards.py  general_signals.py  metrics.json  metrics_v2_final.json  metrics_v2_restored.json  metrics_v3.json  metrics_v4.json  metrics_v5_final.json  multi_smoke.py  multi_smoke_report.json  oracle_f1.py  pin_inspect.py  pin_inspect.txt  separate_wires_audit.json  separate_wires_audit.py  (+16 more)
docs/: ARCHITECTURE.md  DETECTOR.md
scripts/: align_kicad_to_pdf.py  build_detector_dataset.py  demo_end_to_end.py  download_schematics.py  expand_dataset.py  extract_baseline.py  generate_synthetic_schematics.py  kicad_net_reconstructor.py  train_detector.py  validate_net_equivalence.py
src/cli/: query.py
src/core/: coordinate_system.py  erc.py  graph_builder.py  kicad_gt_reader.py  logging_config.py  ocr_fallback.py  (+3 more)
tests/: test_clustering_linkage.py  test_clustering_text_guided.py  test_color_separator.py  test_detector_source.py  test_erc.py  test_graph_builder.py  test_junctions.py  test_kicad_gt_reader.py  test_kicad_net_reconstructor.py  test_llm_agent.py  test_llm_tools.py  test_ocr_fallback.py  test_pdf_parser.py  test_render_overlay.py  test_scope.py
(+22 files in other folders)
