[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "schematic-extractor"
version = "0.1.0"
description = "Bridge between legacy PDF schematics and modern simulation / versioning"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Daniele", email = "daniele@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pymupdf>=1.23.0",
    "networkx>=3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "structlog>=23.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "openai>=2.43.0",
]

[project.optional-dependencies]
ocr = [
    # OCR fallback for text-less PDFs (CAD exports with outlined fonts, e.g.
    # arduino_nano). Heavy (pulls onnxruntime + opencv) so kept optional and
    # imported lazily — the core extraction pipeline stays lightweight.
    "rapidocr-onnxruntime>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "black>=23.0.0",
    "pre-commit>=3.5.0",
    "streamlit>=1.28.0",
    "watchdog>=3.0.0",
]

[project.scripts]
schematic-extractor = "src.cli.query:app"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Typer requires function calls (typer.Option/Argument) in argument defaults.
"src/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = [
    "scripts/",
    "data/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
